docker_and_kuber/less05/deploy_rm1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redmine
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate  
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:
      - name: redmine
        image: redmine:4.1.1
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 3000
