docker_and_kuber/less05/service-rm1.yml
apiVersion: v1
kind: Service
metadata:
  name: redmine-svc
spec:
  selector:
    app: redmine
  type: NodePort  
  ports:
#    - name: http
#      protocol: TCP
    - port: 3000
      targetPort: 3000
      nodePort: 30015
